@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/kffmpegthumbnailer-1.1.0-r3.ebuild,v 1.1 2014/03/21 20:05:28 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/kffmpegthumbnailer-1.1.0-r3.ebuild,v 1.2 2014/04/28 22:39:37 johu Exp $
 
 EAPI=5
 
@@ -12,7 +12,7 @@ SRC_URI="http://ffmpegthumbnailer.googlecode.com/files/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="4"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="debug"
 
 DEPEND="
