@@ -1,6 +1,10 @@
 # ChangeLog for media-video/kffmpegthumbnailer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/ChangeLog,v 1.12 2014/03/21 20:05:28 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/ChangeLog,v 1.13 2014/04/28 22:39:37 johu Exp $
+
+  28 Apr 2014; Johannes Huber <johu@gentoo.org>
+  -kffmpegthumbnailer-1.1.0-r2.ebuild, kffmpegthumbnailer-1.1.0-r3.ebuild:
+  amd64/x86 stable, remove old.
 
 *kffmpegthumbnailer-1.1.0-r3 (21 Mar 2014)
 
